[package]
name    = "stellarpass"
version = "0.1.0"
edition = "2021"
description = "On-chain event ticket verification and anti-fraud system built on Stellar Soroban"
license = "MIT"

# ── Library target ──────────────────────────────────────────────────────────
# cdylib  → compiled to a .wasm file for deployment on Soroban
# rlib    → compiled as a normal Rust library for use in tests / integration
[lib]
crate-type = ["cdylib", "rlib"]

# ── Runtime dependencies ────────────────────────────────────────────────────
[dependencies]
soroban-sdk = { version = "21.0.0" }

# ── Dev / test dependencies ─────────────────────────────────────────────────
# "testutils" feature enables Env::default(), mock_all_auths(), address
# generation, and the mock token contracts used in test.rs.
[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

# ── Release profile — optimised for Wasm output ─────────────────────────────
# opt-level = "z"  → minimise binary size (important for Soroban upload limits)
# lto = true       → link-time optimisation removes dead code across crates
# codegen-units = 1 → single codegen unit for maximum inlining / optimisation
# panic = "abort"  → no unwinding machinery; keeps Wasm size small
# strip = "symbols"→ strips debug symbols from the final binary
[profile.release]
opt-level     = "z"
overflow-checks = true
debug         = false
strip         = "symbols"
lto           = true
codegen-units = 1
panic         = "abort"

# ── Wasm-specific release profile ───────────────────────────────────────────
# Soroban CLI uses `cargo build --target wasm32-unknown-unknown --release`
# The settings above apply automatically to that build.
[profile.release-with-logs]
inherits  = "release"
debug-assertions = true   # keep for pre-production testnet deployments
