[package]
name = "tiwala_mart"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Trustless escrow payment system for Southeast Asia built on Stellar Soroban"
repository = "https://github.com/your-org/tiwalamart"
authors = ["TiwalaMart Team"]

[lib]
crate-type = ["cdylib", "rlib"]

# ── Runtime dependencies ────────────────────────────────────────────────────
[dependencies]
soroban-sdk = { version = "22.0.0", features = ["alloc"] }

# ── Test-only dependencies ──────────────────────────────────────────────────
[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils", "alloc"] }

# ── Release profile — optimised for Wasm output ────────────────────────────
# Produces the smallest, most efficient .wasm binary for on-chain deployment.
[profile.release]
opt-level = "z"          # Optimise for binary size (critical for Wasm)
overflow-checks = true   # Keep overflow checks even in release for safety
debug = 0                # Strip debug info
strip = "symbols"        # Remove symbol table from final binary
debug-assertions = false # No debug assertions in production
panic = "abort"          # Abort on panic (no stack unwinding in Wasm)
codegen-units = 1        # Single codegen unit enables better LTO
lto = true               # Link-time optimisation for cross-crate inlining

# ── Release-with-logs profile — for testnet debugging ──────────────────────
# Same as release but keeps debug assertions so contract events are verbose.
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
